--- a/dashboard/static/package.json
+++ b/dashboard/static/package.json
@@ -13,6 +13,9 @@
     "fullcalendar": "^3.9.0",
     "gulp-sourcemaps": "^2.6.3",
     "jquery": "3.3.1",
+    "jquery-ui": "^1.12.1",
+    "jquery-ui-dist": "^1.12.1",
+    "list.js": "^1.5.0",
     "mdi": "2.1.19",
     "moment": "2.22.0",
     "popper.js": "1.12.9",
